# DevCommu-Tutoring-Pogus

./: Homework-todo.py
information retrieval/: Main notebook.ipynb  data_idf.csv  data_tfidf.csv  main.ipynb  p_guild_main copy.ipynb  p_guild_main_original.ipynb  pogus_main_bow.ipynb  pyproject.toml
linear-oop/: linear-oop.ipynb  pyproject.toml
linear-re/: Linear-Regression-Implement.ipynb  pyproject.toml
oop-todo/: Homework-todo.py
pytorch from scratch/: main.ipynb  pyproject.toml
