[tool.poetry]
name = "information retrieval"
version = "0.1.0"
description = ""
authors = ["PogusTheWhisper <gusjangkid@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
numpy = "^1.26.2"
pandas = "^2.1.4"
tqdm = "^4.66.1"
nltk = "^3.8.1"
requests = "^2.31.0"


[tool.poetry.group.dev.dependencies]
ipykernel = "^6.28.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
